# RepoPilot-Agent

./: .editorconfig  .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  repopilot.py
.github/workflows/: ci.yml
docs/: tutorial.md
evals/: README.md
evals/cases/: core.json
evals/fixtures/auth_service/: README.md
evals/fixtures/auth_service/src/: __init__.py  profile.py  token_validation.py
evals/fixtures/github_sync/: README.md
evals/fixtures/web_dashboard/: README.md
src/repopilot_agent/: __init__.py  agent_loop.py  cli.py  context_builder.py  evaluation.py  git_summary.py  git_tools.py  github_tools.py  memory.py  models.py  patch_apply.py  patch_proposer.py  planner.py  repo_source.py  safety.py  scanner.py  search.py  task_runs.py  validation_feedback.py  validation_planner.py  validator.py  web_server.py  web_sessions.py  workflow.py  worktree_sandbox.py
src/repopilot_agent/llm/: __init__.py  base.py  json_utils.py  openai_compatible.py  prompts.py  schema.py  tracing.py
src/repopilot_agent/runtime/: __init__.py  loop.py  models.py  store.py  tools.py
tests/: test_agent_loop.py  test_agent_runtime.py  test_context_builder.py  test_evaluation.py  test_git_workflow.py  test_github_workflow.py  test_llm_planner.py  test_memory.py  test_openai_compatible.py  test_repo_source.py  test_safety.py  test_task_runs.py  test_validation_feedback.py  test_validation_planner.py  test_validator.py  test_web_server.py  test_web_static.py  test_workflow.py  test_worktree_sandbox.py
(+13 files in other folders)
