[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "repopilot-agent"
version = "0.1.0"
description = "AI coding workflow agent for repository analysis, task planning, validation, and implementation summaries."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
repopilot = "repopilot_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
